--- a/index.html
+++ b/index.html
@@ -239,7 +239,16 @@
               </div>
 
               <div class="form-group">
-                <label for="list-ocr">OCR Fiture</label>
+                <label for="list-ocr">Capability</label>
+                <select id="list-ocr" class="form-control">
+                    <option value="0">Small</option>
+                    <option value="1">Medium</option>
+                    <option value="2">Large</option>
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label for="list-ocr">OCR Recognize</label>
                 <select id="list-ocr" class="form-control">
                     <option value="0">Disabled</option>
                     <option value="1">Enabled</option>
@@ -676,7 +685,6 @@
     $.ajaxSetup({
       "error":function() { 
         modalHide();
-        alert("Sorry,there was a mistake.");  
       }
     });
 
@@ -689,7 +697,7 @@
               $("#list-scanner").append($("<option></option>").attr("value",key).text(value)); 
               modalHide();
            });
-         });
+         }).fail(function(jqXHR, textStatus, errorThrown) { alert('Device not connected, please check scanner connection or turn on scanner.'); });
     });
 
     $('#control-panel').on('submit', function(ev) {
@@ -723,7 +731,7 @@
 
             // hide modal
             modalHide();
-        });
+        }).fail(function(jqXHR, textStatus, errorThrown) { alert('Something went wrong, please check scanner connection or turn on scanner.'); });
         // cancel submition
         return false;
     });
