--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <label for="list-ocr">Capability</label>
                 <select id="list-ocr" class="form-control">
                     <option value="0">Small</option>
-                    <option value="1">Medium</option>
+                    <option value="1" selected="selected">Medium</option>
                     <option value="2">Large</option>
                 </select>
               </div>
